@@ -22,11 +22,14 @@ limitations under the License.
 
     <div id="current_state">
 
-      <span class="time"></span>
+      <p class="last_update">Last Update: <abbr>Unknown</abbr></p>
       <div class="info">
 
         <strong></strong>
-        <div class="details"></div>
+        <div class="details">
+          <div class="docs"></div>
+          <div class="dates"></div>
+        </div>
 
         <button class="abort-import warn"><span data-aborting="Aborting Import">Abort Import</span></button>
 
