@@ -250,6 +250,8 @@ Optimizations
 
 * SOLR-3982: Admin UI: Various Dataimport Improvements (steffkes)
 
+* SOLR-4296: Admin UI: Improve Dataimport Auto-Refresh (steffkes)
+
 Bug Fixes
 ----------------------
 
